--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,26 +1,49 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
-  font-family: 'Courier New', Courier, monospace;
+    font-family: "Courier New", Courier, monospace;
+    text-align: center;
 }
 
 img {
-  width: 100px;
-  height: 100px;
+    width: 100px;
+    height: 100px;
 }
 
 .title {
-  font-size: 36px;
-  font-weight: 900;
+    font-size: 36px;
+    font-weight: 900;
+    text-align: center;
+    margin-top: 16px;
+    margin-bottom: 32px;
+}
+
+.plants {
+    display: flex;
+    justify-content: center;
+    gap: 52px;
+}
+
+.barberry,
+.chili,
+.pepper,
+.saffron {
+    max-width: 200px;
 }
 
 /* do not edit this footer */
 .footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 52px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #eee;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 52px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #eee;
 }
