--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,29 +1,80 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  margin: 0;
-  min-height: 100vh;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+a {
+    font-size: 24px;
+    color: white;
+    text-decoration: none;
+}
+
+ul {
+    list-style-type: none;
+}
+
+li {
+  margin-bottom: 16px;
 }
 
 .header {
-  height: 72px;
-  background: darkmagenta;
-  color: white;
+    display: flex;
+    height: 72px;
+    background: darkmagenta;
+    color: white;
+    align-items: center;
+    padding: 16px;
+    font-size: 32px;
+    font-weight: 900;
 }
 
 .footer {
-  height: 72px;
-  background: #eee;
-  color: darkmagenta;
+    display: flex;
+    height: 72px;
+    background: #eee;
+    color: darkmagenta;
+    justify-content: center;
+    align-items: center;
+}
+
+.main {
+    flex: 1;
+    display: flex;
+}
+
+.content {
+    display: flex;
+    padding: 32px;
+    align-items: baseline;
+    flex-wrap: wrap;
+    gap: 32px;
+    align-content: center;
 }
 
 .sidebar {
-  width: 300px;
-  background: royalblue;
-  box-sizing: border-box;
+    width: 300px;
+    background: royalblue;
+    box-sizing: border-box;
+    flex-shrink: 0;
+    padding: 16px;
 }
 
 .card {
-  border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
-  border-radius: 4px;
+    border: 1px solid #eee;
+    box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.06);
+    border-radius: 4px;
+    padding: 12px;
+    width: 300px;
+    padding: auto;
+    min-height: 300px;
 }
